# recruitin-boolean-

./: .gitignore  CLAUDE_DESKTOP_GUIDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_simple.py
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  release.yml
exports/: boolean_taxonomy_20260102_183331.xlsx  lookalike_matrix_20260102_183331.xlsx
exports/huggingface_data/: classification_config.json  classification_train.jsonl  metadata.json  ner_config.json  ner_train.jsonl  similarity_config.json  similarity_train.jsonl
recruitin_boolean/: __init__.py  __main__.py
recruitin_boolean/ai/: __init__.py  huggingface_exporter.py  lookalike_matcher.py
recruitin_boolean/models/: __init__.py  functiegroep.py  taxonomie.py
recruitin_boolean/pipeline/: __init__.py  cli.py  exporters.py  processor.py
recruitin_boolean/search/: __init__.py  boolean_builder.py  validators.py  validators_backup.py
tests/: test_recruitin_boolean.py
