[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitin-boolean"
version = "1.0.13"
description = "Production-ready Boolean search automation for technical recruitment with AI-powered lookalike matching"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Recruitin B.V.", email = "warts@recruitin.nl"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["recruitment", "boolean", "search", "ai", "technical", "hiring", "automation"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/WouterArtsRecruitin/recruitin-boolean-"
Documentation = "https://github.com/WouterArtsRecruitin/recruitin-boolean-#readme"
Repository = "https://github.com/WouterArtsRecruitin/recruitin-boolean-"
Issues = "https://github.com/WouterArtsRecruitin/recruitin-boolean-/issues"

[project.scripts]
recruitin-boolean = "recruitin_boolean.__main__:main"
rboolean = "recruitin_boolean.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["recruitin_boolean*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
