[build-system]
requires = ["setuptools>=61.0,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitin-boolean"
version = "1.0.13"
description = "Boolean search automation for technical recruitment"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Recruitin B.V.", email = "warts@recruitin.nl"}
]
requires-python = ">=3.9"
keywords = ["recruitment", "boolean", "search"]
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
recruitin-boolean = "recruitin_boolean.__main__:main"
rboolean = "recruitin_boolean.__main__:main"

[project.urls]
Homepage = "https://github.com/WouterArtsRecruitin/recruitin-boolean-"

[tool.setuptools.packages.find]
where = ["."]
include = ["recruitin_boolean*"]
